flux/apps/media/clovalink/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clovalink-private
  namespace: clovalink
  annotations:
    cert-manager.io/cluster-issuer: nahsi.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media"
    gethomepage.dev/name: "Clovalink"
    gethomepage.dev/icon: "https://raw.githubusercontent.com/ClovaLink/ClovaLink/refs/heads/main/docs/assets/logo.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=clovalink,app.kubernetes.io/component=backend"

    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-private
  rules:
    - host: &host clovalink.nahsi.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: clovalink-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clovalink-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: clovalink-tls
